--- a/view/index.ejs
+++ b/view/index.ejs
@@ -66,6 +66,6 @@
 
     </form>    
     </main>
-    <script src="../static/custom.js"></script>
+    <!-- <script src="../static/custom.js"></script> -->
 </body>
 </html>
