--- a/view/result.ejs
+++ b/view/result.ejs
@@ -14,7 +14,10 @@
        <div><h2><%= pet.name %></h2>
             <h2><%= pet.age %></h2>
             <h2><%= pet.soort %></h2>
-            <h2><%= pet.trait %></h2></div></div>
+            <h2><%= pet.trait %></h2>
+            <form class="favoriteForm" method="post" action="/favorited">
+                <button name="favorite" type="submit" value="<%= pet.name %>">Favorite</button>
+            </form></div>
     <% }) %>
 
     <a href="http://localhost:4000/"><button>Retake!</button></a>
