header aangepast naar nieuwste versie

--- a/view/partials/header.ejs
+++ b/view/partials/header.ejs
@@ -1,5 +1,16 @@
 <header>
+    <h1>pawfect Match</h1>
     <nav>
-        <img src="../static/images/logo.png" alt="logo PawfectMatch">
+        <ul>
+            <li>
+                <img src="../static/images/icons/liken.svg">Opgeslagen
+            </li>
+            <li>
+                <img src="../static/images/icons/delen.svg">voeg dier toe
+            </li>
+            <li>
+                <img src="../static/images/icons/profiel.svg">mijn profiel
+            </li>
+        </ul>
     </nav>
 </header>
