routes en login aangemaakt

--- a/view/partials/header.ejs
+++ b/view/partials/header.ejs
@@ -1,16 +1,22 @@
 <header>
-    <h1>pawfect Match</h1>
+    <a href="/"><h1>pawfect Match</h1></a>
     <nav>
         <ul>
-            <li>
-                <img src="../static/images/icons/liken.svg">Opgeslagen
-            </li>
-            <li>
-                <img src="../static/images/icons/delen.svg">voeg dier toe
-            </li>
-            <li>
-                <img src="../static/images/icons/profiel.svg">mijn profiel
-            </li>
+            <a href="">
+                <li>
+                    <img src="../static/images/icons/liken.svg">Opgeslagen
+                </li>
+            </a>
+            <a href="">
+                <li>
+                    <img src="../static/images/icons/delen.svg">voeg dier toe
+                </li>
+            </a>
+            <a href="/login">
+                <li>
+                    <img src="../static/images/icons/profiel.svg">mijn profiel
+                </li>
+            </a>
         </ul>
     </nav>
 </header>
