CSS in orde gemaakt

--- a/view/login.ejs
+++ b/view/login.ejs
@@ -20,7 +20,7 @@
 
                 <input type="submit" value="inloggen">
             </form>
-            <p>heb je nog geen account? <a href="/registreren"><b>Registreer hier</b></a></p>
+            <p>heb je nog geen account? <a href="/register"><b>Registreer hier</b></a></p>
         </div>
 
     </main>
