--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,7 +3,8 @@
 
 @font-face {
     font-family: Recky;
-    src: url("/Fonts/Recky.ttf");
+    src: url("../Fonts/Recky.ttf") format('truetype');
+
 }
 
 /* general */
