--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: Recky;
-    src: url("../Fonts/Recky.ttf") format('truetype');
+    src: url("/static/Fonts/Recky.ttf") format('truetype');
 
 }
 
