--- a/view/result.ejs
+++ b/view/result.ejs
@@ -9,20 +9,23 @@
 <!-- het dier wordt weergegevn wat er bij past -->
 <main>
     <div class="results">
-    <% resultPet.forEach((pet) => { %>
-    <div class="info"><img class="petpicture" src="<%= pet.photo %>" alt="photo of a pet" />
-       <div><h2><%= pet.name %></h2>
-            <h2><%= pet.age %></h2>
-            <h2><%= pet.soort %></h2>
-            <h2><%= pet.trait %></h2>
-            <form class="favoriteForm" method="post" action="/favorited">
-                <button name="favorite" type="submit" value="<%= pet.name %>">Favorite</button>
-            </form></div>
-    <% }) %>
+        <% resultPet.forEach((pet) => { %>
+        <div class="info"><img class="petpicture" src="<%= pet.photo %>" alt="photo of a pet" />
+            <div>
+                <h2><%= pet.name %></h2>
+                <h2><%= pet.age %></h2>
+                <h2><%= pet.soort %></h2>
+                <h2><%= pet.trait %></h2>
+                <form class="favoriteForm" method="post" action="/favorited">
+                    <button name="favorite" type="submit" value="<%= pet.name %>">Favorite</button>
+                </form>
+            </div>
+        </div>
+        <% }) %>
 
-    <a href="http://localhost:4000/"><button>Retake!</button></a>
+        <a href="http://localhost:4000/"><button>Retake!</button></a>
     </div>
-    </main>
+</main>
 
 </body>
 </html>
