Plaats geüploade afbeeldingen met multer in een folder met een mongoDB objectID als naam
Door per dier een folder te maken blijven de afbeeldingen georganiseerd. Door die folder een objectID als naam te geven is het makkelijker te koppelen aan een bestand in de database met diezelfde objectID

--- a/view/postform.ejs
+++ b/view/postform.ejs
@@ -7,7 +7,7 @@
 
     <main>
         <h1>Post an animal</h1>
-        <form action="">
+        <form action="/post/submit" method="post" enctype="multipart/form-data">
             
             <label for="name">Animal Name</label>
             <input type="text" name="name" id="animal_name">
