--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -123,6 +123,7 @@ form input[type=submit] {
     margin-top: 1em;
     border-radius: 5px;
     text-transform: uppercase ;
+    cursor: pointer;
 }
 
 
@@ -227,7 +228,7 @@ main button {
 
 // Inloggen 
 
-.login main {
+.login main{
     display: flex;
     align-items: center;
     justify-content:center;
@@ -240,47 +241,62 @@ main button {
     background-size: cover;
 }
 
-.login main div:first-of-type {
+.register main{
+    display: flex;
+    align-items: center;
+    justify-content:center;
+
+    height: calc(100vh - var(--header-height));
+    overflow-y: hidden;
+    background-image: url(../static/images/dogbg1.jpg) ;
+    background-position: right bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.login main div:first-of-type , .register main div:first-of-type {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.login main div:first-of-type section {
+.login main div:first-of-type section , .register main div:first-of-type section {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-.login main div:first-of-type section > h1 {
+.login main div:first-of-type section > h1 , .register main div:first-of-type section > h1 {
     font-size: 3.3em;
     color: #e0815e;
 
 }
 
-.login main div:first-of-type section > h2 {
+.login main div:first-of-type section > h2 , .register main div:first-of-type section > h2{
     font-size: 2.8em;
     font-family: "Recky", sans-serif;
     color: white;
     margin-bottom: 1em;
 }
 
-.login > form {
+.login > form , .register > form {
     height: 50%;
 
     display: flex;
     flex-direction: column;
 }
 
-.login main div:first-of-type p {
+.login main div:first-of-type p , .register main div:first-of-type p {
     color: white;
 }
 
-.login main div:first-of-type p > a {
+.login main div:first-of-type p > a , .register main div:first-of-type p > a{
     color: #e0815e;
 }
 
 .login main div:first-of-type p,
-.login main div:first-of-type p > a {
+.login main div:first-of-type p > a ,
+.register main div:first-of-type p,
+.register main div:first-of-type p > a  {
     font-family: var(--font-family);
 }
