like feature added in mvc model

--- a/view/favorited.ejs
+++ b/view/favorited.ejs
@@ -10,7 +10,7 @@
 <main>
     <h1><%= favoritePet %></h1>
     </main>
-    <script src="../index.js"></script>
+    <!-- <script src="../index.js"></script> -->
 
 </body>
 </html>
