fix route not found, getting data form database

--- a/view/favorites.ejs
+++ b/view/favorites.ejs
@@ -16,7 +16,7 @@
             <h2><%= favorite.soort %></h2>
             <h2><%= favorite.trait %></h2>
             <form class="favoriteForm" method="post" action="">
-                <button name="favorite" type="submit" value="<%= pet.name %>">Remove</button>
+                <button name="favorite" type="submit" value="<%= favorite.name %>">Remove</button>
             </form></div>
     <% }) %>
 
