--- a/view/login.ejs
+++ b/view/login.ejs
@@ -16,7 +16,7 @@
                 <input required type="mail" value="" id="id" name="email" placeholder="vul hier je email adres in">
 
                 <label for="id">wachtwoord</label>
-                <input required type="text" value="" id="id" name="wachtwoord" placeholder="vul hier je wachtwoord in">
+                <input required type="password" value="" id="id" name="wachtwoord" placeholder="vul hier je wachtwoord in">
 
                 <input type="submit" value="inloggen">
             </form>
