--- a/view/profile.ejs
+++ b/view/profile.ejs
@@ -11,7 +11,7 @@
         </section>
         <div>
             <div>
-                <img src="">
+                <img src="../static/images/dog1.jpg">
             </div>
             <form method="post" action="">
                 <label for="id">Gebruikersnaam</label>
