--- a/view/profile.ejs
+++ b/view/profile.ejs
@@ -7,7 +7,7 @@
 
     <main>
         <section>
-            <h1>WELKOM OP PROFIEL</h1>
+            <h1>WELKOM OP <% req.session.user %> PROFIEL</h1>
         </section>
         <div>
             <div>
