Voeg sessies to om ingelogd te blijven en gebruiker te kunnen herkennen

--- a/view/profile.ejs
+++ b/view/profile.ejs
@@ -7,7 +7,7 @@
 
     <main>
         <section>
-            <h1>WELKOM OP PROFIEL</h1>
+            <h1>WELKOM OP <%= data.username %> PROFIEL</h1>
         </section>
         <div>
             <div>
