--- a/view/favorites.ejs
+++ b/view/favorites.ejs
@@ -15,7 +15,7 @@
             <h2><%= favorite.age %></h2>
             <h2><%= favorite.soort %></h2>
             <h2><%= favorite.trait %></h2>
-            <form class="favoriteForm" method="post" action="">
+            <form class="favoriteForm" method="post" action="/removelike">
                 <button name="favorite" type="submit" value="<%= favorite.name %>">Remove</button>
             </form></div>
     <% }) %>
