--- a/view/favorites.ejs
+++ b/view/favorites.ejs
@@ -17,7 +17,7 @@
             <h2><%= favorite.trait %></h2>
             <form class="favoriteForm" method="post" action="/removelike">
                 <button name="favorite" type="submit" value="<%= favorite.name %>">Remove</button>
-            </form></div>
+            </form></div></div>
     <% }) %>
 
     <a href="http://localhost:4000/"><button>Retake!</button></a>
