Voeg specifieke post form styling toe aan alleen post form

--- a/view/postform.ejs
+++ b/view/postform.ejs
@@ -10,7 +10,7 @@
             <section>
                 <h1>Post an animal</h1>
             </section>
-                <form action="/post/submit" method="post" enctype="multipart/form-data" id="post-form">
+                <form action="/post/submit" method="post" enctype="multipart/form-data" class="post-form">
                     
                     <label for="name">Animal Name</label>
                     <input type="text" name="name" id="name" required>
