Voeg posten toe aan de header

--- a/view/partials/header.ejs
+++ b/view/partials/header.ejs
@@ -7,7 +7,7 @@
                     <img src="../static/images/icons/liken.svg">Opgeslagen
                 </li>
             </a>
-            <a href="">
+            <a href="/post">
                 <li>
                     <img src="../static/images/icons/delen.svg">voeg dier toe
                 </li>
