styling toegevoegd error pagina (klaar)

--- a/view/error.ejs
+++ b/view/error.ejs
@@ -5,9 +5,9 @@
 <body>
     <%- include ('../view/partials/header') %>
 
-    <main>
+    <main class="errorpage">
         <h1>Gebruiker bestaat al</h1>
-        <a href="/register"><b>Probeer opnieuw</b></a>
+        <a href="/register" class="errorbutton"><b>Probeer opnieuw</b></a>
     </main>
     <script src="../index.js"></script>
 </body>
