--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -356,3 +356,11 @@ main button {
 .profiel > main > a {
     margin-top: 2em;
 }
+
+// comment
+
+.comment {
+    background-color: #0002;
+    margin: 1em 0 1em 0;
+    padding: 1em;
+}
