Verander Soort naar species

--- a/view/index.ejs
+++ b/view/index.ejs
@@ -15,15 +15,15 @@
         <section>
             <h2>I'm looking for a...</h2>
             <ul>
-                <li><input class="box" type="radio" name ="soort" id="cat" value="cat">
+                <li><input class="box" type="radio" name ="species" id="cat" value="cat">
                     <label for="cat">Cat</label>
                 </li>
 
-                <li><input class="box" type="radio" name ="soort" id="dog" value="dog">
+                <li><input class="box" type="radio" name ="species" id="dog" value="dog">
                     <label for="dog">Dog</label>
                 </li>
 
-                <li><input class="box" type="radio" name ="soort" id="bunny" value="bunny">
+                <li><input class="box" type="radio" name ="species" id="bunny" value="bunny">
                     <label for="bunny">Bunny</label>
                 </li>
             </ul>
