--- a/view/single-animal.ejs
+++ b/view/single-animal.ejs
@@ -22,6 +22,7 @@
 
     <% sortedComments.forEach((comment) => { %>
         <div class="comment">
+            <p><%= comment.username %></p>
             <p><%= comment.comment %></p>
             <p>
                 <!-- bron: https://stackoverflow.com/questions/3177836/how-to-format-time-since-xxx-e-g-4-minutes-ago-similar-to-stack-exchange-site -->
@@ -54,8 +55,6 @@
                     return Math.floor(seconds) + " seconds";
                   }
                   var aDay = 24*60*60*1000;
-                  console.log(timeSince(new Date(Date.now()-aDay)));
-                  console.log(timeSince(new Date(Date.now()-aDay*2)));
                 %>
                 <%= timeSince(new Date(comment.date)) + " ago" %>
             </p>
