--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -378,6 +378,24 @@ main button {
     padding: 1em;
 }
 
+.errorpage{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    align-items: center;
+    margin-top: 5em;
+}
+
+.errorbutton{
+    text-decoration: none;
+    border: 0.1em solid var(--accent-color);
+    border-radius: 1em;
+    padding: 0.5em;
+    background-color: var(--accent-color);
+    color: var(--background-color);
+    font-family: var(--font-family);
+}
+
 /* File Input */
 .image-list {
     display: grid;
