--- a/view/result.ejs
+++ b/view/result.ejs
@@ -10,7 +10,7 @@
 <main>
     <div class="results">
         <% resultPet.forEach((pet) => { %>
-        <div class="info"><img class="petpicture" src="<%= pet.photo %>" alt="photo of a pet" />
+        <div class="info"><img class="petpicture" src="<%= pet.images[0] %>" alt="photo of a pet" />
             <div>
                 <h2><%= pet.name %></h2>
                 <h2><%= pet.age %></h2>
