--- a/view/single-animal.ejs
+++ b/view/single-animal.ejs
@@ -21,9 +21,9 @@
 
     <% sortedComments.forEach((comment) => { %>
         <div class="comment">
-            <p><%= comment.username %></p>
+            <h2><%= comment.username %></h2>
+            <p><%= timeSince(new Date(comment.date)) + " ago" %></p>
             <p><%= comment.comment %></p>
-            <p>
                 <!-- bron: https://stackoverflow.com/questions/3177836/how-to-format-time-since-xxx-e-g-4-minutes-ago-similar-to-stack-exchange-site -->
                 <%
                 function timeSince(date) {
@@ -55,8 +55,6 @@
                   }
                   var aDay = 24*60*60*1000;
                 %>
-                <%= timeSince(new Date(comment.date)) + " ago" %>
-            </p>
         </div>
       <% }) %>
 
