--- a/view/error.ejs
+++ b/view/error.ejs
@@ -7,7 +7,10 @@
 
     <main class="errorpage">
         <h1>Gebruiker bestaat al</h1>
-        <a href="/register" class="errorbutton"><b>Probeer opnieuw</b></a>
+        <div>
+            <a href="/register" class="errorbutton"><b>Probeer opnieuw</b></a>
+            <a href="/login" class="errorbutton"><b>Ga naar inloggen</b></a>
+        </div>
     </main>
     <script src="../index.js"></script>
 </body>
