--- a/view/partials/header.ejs
+++ b/view/partials/header.ejs
@@ -12,7 +12,7 @@
                     <img src="../static/images/icons/delen.svg">voeg dier toe
                 </li>
             </a>
-            <a href="/login">
+            <a href="/profile">
                 <li>
                     <img src="../static/images/icons/profiel.svg">mijn profiel
                 </li>
