--- a/view/liked.ejs
+++ b/view/liked.ejs
@@ -6,11 +6,8 @@
 <body>
 <%- include ('../view/partials/header') %>
 
-<!-- het dier wordt weergegevn wat er bij past -->
 <main>
-    <h1><%= favoritePet %></h1>
+    <h2><%= favoritePetLiked %></h2>
     </main>
-    <!-- <script src="../index.js"></script> -->
-
 </body>
 </html>
