comment form styling toegevoegd

--- a/sass/_comment.scss
+++ b/sass/_comment.scss
@@ -7,7 +7,7 @@
     flex-wrap: wrap;
     align-items: flex-end;
     gap: .5em;
-    box-shadow: 0 .3em var(--accent-color);
+    // box-shadow: 0 .3em var(--accent-color);
 
     h2 {
         color: var(--accent-color);
