--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -13,6 +13,7 @@
     --background-color: #fef2ca;
     --header-color: #EECE79;
     --accent-color: #e0815e;
+    --accent-color-hover: #c26442;
     --font-family: 'Yusei Magic', sans-serif;
 }
 
