--- a/view/postform.ejs
+++ b/view/postform.ejs
@@ -37,9 +37,20 @@
                     </select>
 
                     <label>Traits</label>
-                    <div class="checkbox-container"><input type="checkbox" name="trait" value="inquisitive" id="inquisitive"><label for="inquisitive">inquisitive</label></div>
-                    <div class="checkbox-container"><input type="checkbox" name="trait" value="playful" id="playful"><label for="playful">playful</label></div>
-                    <div class="checkbox-container"><input type="checkbox" name="trait" value="friendly" id="friendly"><label for="friendly">friendly</label></div>
+                    <ul>
+                        <li class="checkbox-container">
+                            <input type="checkbox" name="trait" value="inquisitive" id="inquisitive">
+                            <label for="inquisitive">inquisitive</label>
+                        </li>
+                        <li class="checkbox-container">
+                            <input type="checkbox" name="trait" value="playful" id="playful">
+                            <label for="playful">playful</label>
+                        </li>
+                        <li class="checkbox-container">
+                            <input type="checkbox" name="trait" value="friendly" id="friendly">
+                            <label for="friendly">friendly</label>
+                        </li>
+                    </ul>
 
                     <button type="submit" id="submit">submit</button>
 
