--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -4,16 +4,18 @@ form {
     flex-direction: column;
     width: 75%;
     align-items: start;
-    
+
     label {
         font-size: 1.2em;
         color: black;
         font-family: "Recky";
         text-transform: uppercase;
         margin-bottom: .3em;
+        cursor: pointer;
     }
 
-    input, select {
+    input,
+    select {
         color: var(--accent-color);
         font-family: var(--font-family);
         background-color: white;
@@ -24,6 +26,7 @@ form {
         border: none;
         width: 100%;
         max-width: 30em;
+        cursor: pointer;
     }
 
     input::placeholder {
@@ -34,13 +37,22 @@ form {
         max-width: 10em;
     }
 
-    .checkbox-container {
+    ul {
+        list-style: none;
+        margin-bottom: 2em;
+        width: 100%;
+    }
+
+    li {
         display: flex;
         gap: 1ch;
+        align-items: center;
+        justify-content: start;
+        width: 100%;
 
         input {
             margin-bottom: 0;
-            font-size: 2em;
+            width: auto
         }
 
         label {
@@ -50,20 +62,19 @@ form {
             font-size: 1em;
         }
     }
-}
 
-form input[type=submit],
-.profiel form input[type=submit] {
-    background-color: #e0815e;
-    color: white;
-    font-family: "Recky";
-    padding: .5em;
-    font-size: 1em;
-    margin-top: 1em;
-    border-radius: 5px;
-    text-transform: uppercase;
-    cursor: pointer;
-    border: none;
+    input[type="submit"] {
+        background-color: #e0815e;
+        color: white;
+        font-family: "Recky";
+        padding: .5em;
+        font-size: 1em;
+        margin-top: 1em;
+        border-radius: 5px;
+        text-transform: uppercase;
+        cursor: pointer;
+        border: none;
+    }
 }
 
 .login>form,
