--- a/view/login.ejs
+++ b/view/login.ejs
@@ -9,18 +9,18 @@
         <div>
             <section>
                 <h1>PAWFECT MATCH</h1>
-                <h2>GA VERDER DOOR IN TE LOGGEN</h2>
+                <h2>Proceed by logging in</h2>
             </section>
             <form method="post" action="/login/submit">
                 <label for="id">E-mail</label>
-                <input required type="mail" value="" id="id" name="email" placeholder="vul hier je email adres in">
+                <input required type="mail" value="" id="id" name="email" placeholder="Fill in you email here">
 
-                <label for="id">wachtwoord</label>
-                <input required type="password" value="" id="id" name="wachtwoord" placeholder="vul hier je wachtwoord in">
+                <label for="id">password</label>
+                <input required type="password" value="" id="id" name="wachtwoord" placeholder="Fill in you password here">
 
-                <input type="submit" value="inloggen">
+                <input type="submit" value="login">
             </form>
-            <p>heb je nog geen account? <a href="/register"><b>Registreer hier</b></a></p>
+            <p>Dont have an account yet?<a href="/register"><b> Create one here</b></a></p>
         </div>
     </main>
 </body>
