--- a/view/profile.ejs
+++ b/view/profile.ejs
@@ -7,26 +7,26 @@
 
     <main>
         <section>
-            <h1>WELKOM OP <%= data.username %> PROFIEL</h1>
+            <h1>WELCOME TO YOUR PROFILE, <%= data.username %>! </h1>
         </section>
         <div>
             <div>
                 <img src="../static/images/dog1.jpg">
             </div>
             <form method="post" action="/profile/submit">
-                <label for="id">Gebruikersnaam</label>
+                <label for="id">username</label>
                 <input  type="text" id="id" name="username" value="<%= data.username %>">
 
                 <label for="id">E-mail</label>
                 <input  type="mail" id="id" name="email" value="<%= data.email %>">
 
-                <label for="id">Wachtwoord</label>
-                <input  type="password" id="id" name="wachtwoord" value="">
+                <label for="id">password</label>
+                <input  type="password" id="id" name="wachtwoord" value="<%= data.password %>">
 
                 <input type="submit" value="bewerken opslaan">
             </form>
         </div>
-        <a href="/profile/logout">Uitloggen</a>
+        <a href="/profile/logout">Log out</a>
     </main>
 </body>
 
