Added feedback like/unlike, connected favorites to header and added zero state

--- a/view/partials/header.ejs
+++ b/view/partials/header.ejs
@@ -2,7 +2,7 @@
     <a href="/"><h1>pawfect Match</h1></a>
     <nav>
         <ul>
-            <a href="">
+            <a href="/favorites">
                 <li>
                     <img src="../static/images/icons/liken.svg">Opgeslagen
                 </li>
