--- a/view/favorites.ejs
+++ b/view/favorites.ejs
@@ -9,21 +9,25 @@
 <!-- het dier wordt weergegevn wat er bij past -->
 <main>
     <div class="results">
-    <% favorites.forEach((favorite) => { %>
-    <div class="info"><img class="petpicture" src=" <%= favorite.photo %>" alt="photo of a pet" />
-       <div><h2><%= favorite.name %></h2>
-            <h2><%= favorite.age %></h2>
-            <h2><%= favorite.soort %></h2>
-            <h2><%= favorite.trait %></h2>
-            <form class="favoriteForm" method="post" action="/removelike">
-                <button name="favorite" type="submit" value="<%= favorite.name %>">Remove</button>
-            </form></div></div>
-    <% }) %>
-
-    <a href="http://localhost:4000/"><button>Retake!</button></a>
+    <% if (favorites < 1) { %>
+        <h2>No favorites have been added yet! Click the button below to add favorites</h2>
+    <% } else { %>
+        <% favorites.forEach((favorite) => { %>
+            <div class="info"><img class="petpicture" src=" <%= favorite.photo %>" alt="photo of a pet" />
+               <div><h2><%= favorite.name %></h2>
+                    <h2><%= favorite.age %></h2>
+                    <h2><%= favorite.soort %></h2>
+                    <h2><%= favorite.trait %></h2>
+                    <form class="favoriteForm" method="post" action="/removelike">
+                        <button name="favorite" type="submit" value="<%= favorite.name %>">Remove</button>
+                    </form>
+                </div>
+            </div>
+        <% }) %>
+    <% } %>
+    <a href="http://localhost:4000/"><button>Add favorites</button></a>
     </div>
     </main>
-    <script src="../index.js"></script>
 
 </body>
 </html>
