--- a/view/error.ejs
+++ b/view/error.ejs
@@ -6,10 +6,10 @@
     <%- include ('../view/partials/header') %>
 
     <main class="errorpage">
-        <h1>Gebruiker bestaat al</h1>
+        <h1>User already exists</h1>
         <div>
-            <a href="/register" class="errorbutton"><b>Probeer opnieuw</b></a>
-            <a href="/login" class="errorbutton"><b>Ga naar inloggen</b></a>
+            <a href="/register" class="errorbutton"><b>Try again</b></a>
+            <a href="/login" class="errorbutton"><b>Go to log in page</b></a>
         </div>
     </main>
 </body>
