tekst engels gemaakt

--- a/view/register.ejs
+++ b/view/register.ejs
@@ -14,13 +14,13 @@
             </section>
             <form method="post" action="/register/submit">
                 <label for="id">username</label>
-                <input required type="text" value="" id="id" name="username" placeholder="type your username here">
+                <input required type="text" value="" id="id" name="username" placeholder="Fill in your username here">
 
                 <label for="id">e-mail</label>
-                <input required type="mail" value="" id="id" name="email" placeholder="type your mail here">
+                <input required type="mail" value="" id="id" name="email" placeholder="Fill in your mail here">
 
                 <label for="id">password</label>
-                <input required type="password" value="" id="id" name="wachtwoord" placeholder="type your password here">
+                <input required type="password" value="" id="id" name="wachtwoord" placeholder="Fill in your password here">
 
                 <input type="submit" value="register">
             </form>
