result pagina styling

--- a/view/result.ejs
+++ b/view/result.ejs
@@ -19,7 +19,7 @@
                 <form class="favoriteForm" method="post" action="/liked">
                     <button name="favorite" type="submit" value="<%= pet.name %>">Favorite</button>
                 </form>
-                <a href="/result/<%= pet._id %>">meer info</a>
+                <a href="/result/<%= pet._id %>">More info</a>
             </div>
         </div>
         <% }) %>
