--- a/view/favorites.ejs
+++ b/view/favorites.ejs
@@ -19,7 +19,8 @@
                     <h2><%= favorite.soort %></h2>
                     <h2><%= favorite.trait %></h2>
                     <form class="favoriteForm" method="post" action="/removelike">
-                        <button name="favorite" type="submit" value="<%= favorite.name %>">Remove</button>
+                        <input type="hidden" name="favoritename" value="<%= favorite.name %>">
+                        <button class="unlikeBtn" name="favorite" type="submit" value="<%= favorite._id %>">Remove</button>
                     </form>
                 </div>
             </div>
