--- a/view/result.ejs
+++ b/view/result.ejs
@@ -17,7 +17,8 @@
                 <h2><%= pet.soort %></h2>
                 <h2><%= pet.trait %></h2>
                 <form class="favoriteForm" method="post" action="/liked">
-                    <button name="favorite" type="submit" value="<%= pet.name %>">Favorite</button>
+                    <input type="hidden" name="petname" value="<%= pet.name %>">
+                    <button class="likeBtn" name="favorite" type="submit" value="<%= pet._id %>">Favorite</button>
                 </form>
                 <a href="/result/<%= pet._id %>">meer info</a>
             </div>
