styling upload pagina

--- a/view/postform.ejs
+++ b/view/postform.ejs
@@ -6,7 +6,7 @@
 <%- include ('../view/partials/header') %>
 
     <main>
-        <div>
+        <div class="uploadform">
             <section>
                 <h1>Post an animal</h1>
             </section>
