--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -2,6 +2,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: start;
+    width: 80%;
 
     label {
         font-size: 1.2em;
