--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -40,12 +40,6 @@ body {
     background-color: var(--background-color);
 }
 
-// main styling
-main {
-    width: 80%;
-    margin: auto;
-}
-
 @import 'header', 'forms', 'comment', 'result-list', 'result-page', 'error';
 
 
@@ -114,7 +108,7 @@ main button {
     font-family: 'Recky', sans-serif;
     cursor: pointer;
     font-size: 1.2em;
-    diplay: flex;
+    display: flex;
     align-items: flex-end;
 }
 
@@ -147,13 +141,6 @@ main button:hover {
     border: 0.5em solid var(--header-color);
     margin-bottom: 2em;
 }
-
-/* 404page.ejs main styling */
-// h1 {
-//     font-family: var(--font-family);
-//     margin-top: 2em;
-//     margin-left: 1em;
-// }
 
 // Inloggen 
 .login main {
@@ -280,4 +267,10 @@ main button:hover {
     background-color: var(--accent-color);
     color: var(--background-color);
     font-family: var(--font-family);
+}
+
+.uploadform{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
