--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -40,6 +40,12 @@ body {
     background-color: var(--background-color);
 }
 
+// main styling
+main {
+    width: 80%;
+    margin: auto;
+}
+
 @import 'header', 'forms', 'comment', 'result-list', 'result-page', 'error';
 
 
@@ -154,6 +160,7 @@ main button:hover {
     background-position: left top;
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100%;
 }
 
 .register main {
@@ -167,6 +174,7 @@ main button:hover {
     background-position: right bottom;
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100%;
 }
 
 .profiel main {
@@ -245,7 +253,16 @@ main button:hover {
 }
 
 .profiel>main>a {
-    margin-top: 2em;
+    background-color: var(--accent-color);
+    color: white;
+    font-family: "Recky";
+    padding: .5em;
+    margin-top: 1em;
+    border-radius: .5em;
+    text-transform: uppercase;
+    cursor: pointer;
+    border: none;
+    font-size: 1.3em;
 }
 
 
@@ -267,10 +284,4 @@ main button:hover {
     background-color: var(--accent-color);
     color: var(--background-color);
     font-family: var(--font-family);
-}
-
-.uploadform{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
